<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/GoalCategory_title">

        <EditTextPreference
            android:defaultValue="@string/EditTextPreference_defaultValue"
            android:key="key_edit_text_preference_goal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/EditTextPreference_summary"
            android:title="@string/EditTextPreference_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/exposedCategory_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="key_switch_preference_notification"
            android:summary="@string/notification_summary"
            android:title="@string/notification" />
        <ListPreference
            android:summary="@string/alarmSetting_summary"
            android:title="@string/alarmSetting"
            android:dialogTitle="@string/alarmDialogTitle"
            android:entries="@array/array_alarm_entries"
            android:entryValues="@array/array_alarm_values"
            android:defaultValue="0"
            android:key="key_list_preference_alarm" />
    </PreferenceCategory>
</PreferenceScreen>